<resources>
    <string name="app_name">ProjetJDR</string>
    <string name="lancer_le_de">Lancer le dé</string>
    <string name="selectionnez_un_de_a_lancer">Sélectionnez un dé à lancer</string>
    <string name="retour">Retour</string>
    <string name="appuyer_ou_secouer">Appuyez sur LANCER LE DÉ ou secouer le téléphone !</string>
    <string name="plus1">+1</string>
    <string name="moins1">-1</string>
    <string name="historique">Historique</string>
    <string name="choix_du_type_de_la_fiche_perso">Choix du type de la fiche perso :</string>
    <string name="creer_une_fiche_perso">Créer une fiche perso</string>
    <string name="vous_n_avez_cree_aucune_fiche">Vous n\'avez créé aucune fiche !</string>
    <string name="nom">Nom</string>
    <string name="lancer_des_des">Lancer des dés</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="mes_fiches">Mes fiches</string>
    <string name="importer_un_mod_le_de_fiche">Importer un modèle de fiche</string>
    <string name="icone">icone</string>
    <string name="la_liste_de_mes_fiches">La liste de mes fiches</string>
</resources>
