<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.uqac.projetjdr.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/nom" />

                <TextView
                    android:id="@+id/textNomFichePerso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_weight="4" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="BoutonSupprimer"
                    android:id="@+id/Supprimer"
                    android:text="@string/supprimer"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="BoutonModifier"
                    android:id="@+id/Modifier"
                    android:text="@string/modifier"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/LancerDes"
                    app:srcCompat="@mipmap/des6"
                    android:background="@color/desClassique"
                    android:onClick="BoutonLancerDes"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/affichage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>